--- a/data/config.yaml
+++ b/data/config.yaml
@@ -1,5 +1,5 @@
-name: Jacky Zhao
-enableToc: true
+name: Indie Hacker Man
+enableToc: false
 openToc: false
 enableLinkPreview: true
 enableLatex: true
@@ -20,8 +20,7 @@ search:
 description:
   Host your second brain and digital garden for free. Quartz features extremely fast full-text search,
   Wikilink support, backlinks, local graph, tags, and link previews.
-page_title:
-  "🪴 Quartz 3.3"
+page_title: "The Indie Hacker's Guide to the Galaxy 📕"
 links:
   - link_name: Twitter
     link: https://twitter.com/_jzhao
