--- a/config.toml
+++ b/config.toml
@@ -1,10 +1,11 @@
-baseURL = "https://quartz.jzhao.xyz/"
+baseURL = "https://benjaminleungdev.github.io/ihgg/"
 languageCode = "en-us"
 relativeURLs = false
 disablePathToLower = true
 ignoreFiles = [
-    "/content/templates/*",
+    "/content/Templater/*",
     "/content/private/*",
+    "/content/Excalidraw/*",
 ]
 summaryLength = 20
 paginate = 10
